Fix heading overflow v2

--- a/styles/index.css
+++ b/styles/index.css
@@ -336,7 +336,7 @@ img {
 }
 
 .head-type {
-    font-size: 5.7rem;
+    font-size: 5.5rem;
 }
 
 
